# zohara-os

./: .gitignore  Cargo.toml  build.rs  build_baremetal.sh  hello.elf  link.ld  link_multiboot.ld  multiboot_header.S  run.sh
.cargo/: config.toml
smp_test_ref/: Makefile  boot.S  core.img  core_cd.img  core_hdd.img  eltorito_cd.img  floppy.img  grub-efi.cfg  grub_hybrid.img  link.ld  ref_test.c  ref_test.elf  smp_grub.iso  smp_test.iso  smp_test2.iso  smp_test3.iso  smp_test4.iso  smp_test5.iso  test_disk.img  test_disk_debug.img  trampoline.S  trampoline.ld  trampoline.raw
smp_test_ref/fatdir/boot/: kernel.elf
smp_test_ref/grub_modules/: http.mod  multiboot.mod  multiboot2.mod  normal.mod
smp_test_ref/iso/boot/: kernel.elf
src/: acpi.rs  allocator.rs  apic.rs  assertions.rs  capabilities.rs  config.rs  device.rs  dmesg.rs  elf.rs  elf_builder.rs  events.rs  fd_table.rs  frame.rs  handles.rs  heap.rs  interrupts.rs  keyboard.rs  linux_compat.rs  logging.rs  main.rs  memdebug.rs  paging.rs  panic.rs  process.rs  runtime.rs  shell.rs  smp.rs  smp_test.rs  spinlock.rs  stats.rs  syscall.rs  task.rs  test_framework.rs  test_programs.rs  timer.rs  uart.rs  usercopy.rs  workqueue.rs
src/arch/: heap.rs
src/arch/arm32/: boot.S  mod.rs
src/arch/arm64/: boot.S  exception.S  gic.rs  mod.rs  paging.rs  syscall.rs  timer.rs
src/arch/x86_64/: ap_trampoline.S  boot.S  boot.s  e820.rs  framebuffer.rs  mod.rs  page_fault.rs  paging.rs  (+1 more)
src/drivers/: ahci.rs  ide.rs  mod.rs
src/fs/: bcache.rs  ext2.rs  fat32.rs  fd.rs  gpt.rs  mod.rs  node.rs  ops.rs  ramfs.rs  zohfs.rs
(+4 files in other folders)
